2014-07-29  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Nathan Stratton Treadway
	* man/xml-source/amgtar.8.xml:
	  Add ": directory is on a different filesystem; not dumped".
	* man/xml-source/amanda-devices.7.xml: Add amanda-changers man page.
	* man/xml-source/ambsdtar.8.xml: Typo.
	* man/xml-source/amanda.conf.5.xml: Typo.

2014-07-24  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c (check_security): service is
	  unused in some compilation path.

2014-07-24  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c (config_is_initialized): Fix declaration.
	* common-src/conffile.h: Comment typo.

2014-07-24  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.h (config_is_initialized): Fix prototype.

2014-07-23  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c (check_security): Take a new service
	  argument.
	* common-src/amanda.h (check_security): Change prototype.
	* common-src/conffile.c (config_is_initialized): New functionto return
	  if the config is initialized.
	* common-src/conffile.h (config_is_initialized): New prototype.
	* common-src/debug.c: (debug_unlink_old): Return if config is not
	  initialized.
	* server-src/amidxtaped.pl: Add "amidxtaped" as argument to
	  check_bsd_security.
	* server-src/amindexd.c: Add "amindexd" as argument to check_security.
	* perl/Amanda/Util.swg (check_security_fd): Take a new service
	  argument, pass it to check_security.
	* perl/Amanda/ClientService.pm (check_bsd_security): Take a new
	  service argument, pass it to Amanda::Util::check_security.

2014-07-14  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/Makefile.am: Fix for building out of tree.

2014-07-14  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/Makefile.am: Fix for building out of tree.

2014-07-11  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Orion Poplawski <orion@cora.nwra.com>
	* ndmp-src/Makefile.am: Fix for building out of tree.
